--- a/Company.html
+++ b/Company.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="log">
-            <a href="#"><img id="logo" src="img/logo.jpg"></a>
+            <abbr title="VeriTech Software IT Services"><a href="#"><img id="logo" src="img/logo.jpg"></a></abbr>
         </div>
         <hr>
         <div id="heading">
